migrator-tests/src/snapshots/migrator_tests__source_down::test_rollback_previous::{{closure}}__two_way___strictsingle field name change strategy: renamedb_state_9.snap
---
source: migrator-tests/src/lib.rs
expression: db_miration_schema_state
---
DbMigrationSchemaState {
    resources: DbInfo {
        analyzers: Analyzers(
            Info(
                {},
            ),
        ),
        functions: Functions(
            Info(
                {},
            ),
        ),
        params: Params(
            Info(
                {},
            ),
        ),
        scopes: Scopes(
            Info(
                {},
            ),
        ),
        tables: Tables(
            Info(
                {
                    "migration": DefineStatementRaw(
                        "DEFINE TABLE migration SCHEMAFULL PERMISSIONS NONE",
                    ),
                },
            ),
        ),
        tokens: Tokens(
            Info(
                {},
            ),
        ),
        users: Users(
            Info(
                {},
            ),
        ),
    },
    migration_meta: [
        StreamLinedMigration {
            basename: Basename(
                "migration_8_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "812b038accb8e6f4faf1ca5785dcd52eafe04253276a78562066c54e6a90da90",
            ),
            checksum_down: Some(
                Checksum(
                    "5cddc4807eb22b201f0570ac3f59b12fe10a3e7999df90f44c1d79bf4012cde9",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_7_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "11d98c740871216b4097896e37d3dab602107d97b8af27684afca245659689d8",
            ),
            checksum_down: Some(
                Checksum(
                    "e0c02e4b902fba690ba0afa9e4178ddfdf9183fb282b4a37e352c936dabb2134",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_6_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: Some(
                Checksum(
                    "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_5_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "6f052b7bec10f8d14738b0cf9908fd193d6ab430d7f1696f0e361b70f79dd7ae",
            ),
            checksum_down: Some(
                Checksum(
                    "be779aba93a10d4872f2cff1ceae44370cda1ce8376160e9655392f0089f1347",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_4_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "2d850089c51a49447395c7b5da3c2cad248644d7a649e2b3711c2d4510cd0ffc",
            ),
            checksum_down: Some(
                Checksum(
                    "b32d97ef0c72b2ed8167f41fe0049b26c83f9b3fd63db462d9f7851d2e2f6b82",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_3_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: Some(
                Checksum(
                    "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_2_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: Some(
                Checksum(
                    "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_1_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "6afbec180b04c58fb85b85c513214b2f9a5d2dd4fbd30ae89fc98fafe93db26b",
            ),
            checksum_down: Some(
                Checksum(
                    "1297b3600eaa5bf46b7cb0f2ef0ec816f722f2aac01dee04e648ec8533a3884d",
                ),
            ),
        },
    ],
}
